--- a/build.gradle
+++ b/build.gradle
@@ -46,6 +46,19 @@ dependencies {
     implementation group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
 
     implementation group: 'org.hibernate', name: 'hibernate-spatial', version: '5.5.7.Final'
+
+    // AWS S3 이미지 업로드를 위한 디펜던시
+    implementation platform('com.amazonaws:aws-java-sdk-bom:1.12.300')
+    implementation 'com.amazonaws:aws-java-sdk-s3'
+
+    // 이미지 리사이징을 위한 marvin 디펜던시
+    implementation 'com.github.downgoon:marvin:1.5.5'
+    implementation 'com.github.downgoon:MarvinPlugins:1.5.5'
+    implementation group: 'org.springframework', name: 'spring-test'
+    implementation group: 'org.springframework', name: 'spring-mock', version: '2.0.8'
+
+    // Tika (이미지 파일만 업로드 할 수 있게 확장자 구별)
+    implementation group: 'org.apache.tika', name: 'tika-core', version: '1.24.1'
 }
 
 tasks.named('test') {
