properties 설정 추가

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
+# awsS3.yml import
+spring.config.import= classpath:/awsS3.yml
+
 ## MySql
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #spring.datasource.url=jdbc:mysql://prscsl4.cdslgeg4iosa.ap-northeast-2.rds.amazonaws.com/prscsl20
