--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,3 +23,4 @@ spring.datasource.password=
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.properties.hibernate.globally_quoted_identifiers= true
 spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto = update
