--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,3 +23,10 @@ spring.datasource.password=
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.properties.hibernate.globally_quoted_identifiers= true
 spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto = update
+
+# S3
+cloud.aws.s3.bucket= devcat-bucket
+cloud.aws.region.static= ap-northeast-2
+cloud.aws.credentials.access-key= AKIAVPO4JKBA3HE2IRUB
+cloud.aws.credentials.secret-key= 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
