--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,3 +24,9 @@ spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL5InnoDBDiale
 spring.jpa.properties.hibernate.globally_quoted_identifiers= true
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto = update
+
+# S3
+cloud.aws.s3.bucket= ${S3_BUCKET}
+cloud.aws.region.static= ${S3_REGION}
+cloud.aws.credentials.access-key= ${S3_ACCESS_KEY}
+cloud.aws.credentials.secret-key= ${S3_SECRET_KEY}
