--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,3 +30,9 @@ cloud.aws.s3.bucket= ${S3_BUCKET}
 cloud.aws.region.static= ${S3_REGION}
 cloud.aws.credentials.access-key= ${S3_ACCESS_KEY}
 cloud.aws.credentials.secret-key= ${S3_SECRET_KEY}
+
+# HTTPS
+server.ssl.key-store= classpath:keystore.p12
+server.ssl.key-store-password= ${SSL_PW}
+server.port= ${SSL_PORT}
+server.http2.enabled= true
