--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@ spring.jpa.hibernate.ddl-auto= update
 jwt.secretKey= ${JWT_SECRET_KEY}
 
 #redis
-spring.redis.host= ${REDIS_HOST}
+spring.redis.host= ${REDIS_HOST}g
 spring.redis.port= ${REDIS_PORT}
 spring.redis.password= ${REDIS_PW}
 
@@ -32,7 +32,7 @@ cloud.aws.credentials.access-key= ${S3_ACCESS_KEY}
 cloud.aws.credentials.secret-key= ${S3_SECRET_KEY}
 
 # HTTPS
-server.ssl.key-store= classpath:keystore.p12
-server.ssl.key-store-password= ${SSL_PW}
-server.port= ${SSL_PORT}
-server.http2.enabled= true
+#server.ssl.key-store= classpath:keystore.p12
+#server.ssl.key-store-password= ${SSL_PW}
+#server.port= ${SSL_PORT}
+#server.http2.enabled= true
