properties 설정 변경

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@ spring.jpa.hibernate.ddl-auto= update
 jwt.secretKey= ${JWT_SECRET_KEY}
 
 #redis
-spring.redis.host= ${REDIS_HOST}g
+spring.redis.host= ${REDIS_HOST}
 spring.redis.port= ${REDIS_PORT}
 spring.redis.password= ${REDIS_PW}
 
