--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -32,7 +32,8 @@ cloud.aws.credentials.access-key= ${S3_ACCESS_KEY}
 cloud.aws.credentials.secret-key= ${S3_SECRET_KEY}
 
 # HTTPS
-#server.ssl.key-store= classpath:keystore.p12
-#server.ssl.key-store-password= ${SSL_PW}
+server.ssl.key-store= classpath:keystore.p12
+server.ssl.key-store-password= ${SSL_PW}
+server.ssl.key-store-type=PKCS12
 #server.port= ${SSL_PORT}
-#server.http2.enabled= true
+server.http2.enabled= true
