--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -35,5 +35,6 @@ cloud.aws.credentials.secret-key= ${S3_SECRET_KEY}
 server.ssl.key-store= classpath:keystore.p12
 server.ssl.key-store-password= ${SSL_PW}
 server.ssl.key-store-type=PKCS12
-#server.port= ${SSL_PORT}
-server.http2.enabled= true
+server.port= ${SSL_PORT}
+server.ssl.enabled= true
+server.ssl.key-alias= tomcat
