--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -34,5 +34,5 @@ cloud.aws.credentials.secret-key= ${S3_SECRET_KEY}
 # HTTPS
 server.ssl.key-store= classpath:keystore.p12
 server.ssl.key-store-password= ${SSL_PW}
+server.port= ${SSL_PORT}
 server.ssl.key-store-type=PKCS12
-server.ssl.enabled= true
