--- a/build.gradle
+++ b/build.gradle
@@ -28,7 +28,7 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
-    // Spring Security 활성화
+    // Spring Security
     implementation 'org.springframework.boot:spring-boot-starter-security'
 
     //jwt
@@ -41,23 +41,29 @@ dependencies {
 
     //websocket
     implementation 'org.springframework.boot:spring-boot-starter-websocket'
-    implementation 'org.springframework.boot:spring-boot-starter-freemarker' // 프론트화면구성용
     implementation 'org.springframework.boot:spring-boot-devtools'
     implementation 'org.webjars:sockjs-client:1.5.1'
     implementation 'org.webjars:stomp-websocket:2.3.4'
-    implementation 'com.google.code.gson:gson:2.8.0'
-    implementation 'org.webjars.bower:vue:2.5.16'
-    implementation 'org.webjars.bower:axios:0.17.1'
-    implementation 'org.webjars.bower:bootstrap:4.3.1'
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 
+    //front - 채팅 웹 화면 구현위해 필요한 JS로드하기 위해 선언, stomp방식 js 추가
+    implementation 'org.webjars.bower:bootstrap:4.3.1'
+    implementation 'org.springframework.boot:spring-boot-starter-freemarker'
+    implementation 'org.webjars.bower:vue:2.5.16'
+    implementation 'org.webjars.bower:axios:0.17.1'
+    implementation 'com.google.code.gson:gson:2.8.0'
 
     // redis
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+    implementation 'org.springframework.boot:spring-boot-starter-data-redis-reactive'
+    implementation 'org.springframework.boot:spring-boot-starter-cache'
+
+    //embedded-redis
+    implementation group: 'it.ozimov', name: 'embedded-redis', version: '0.7.2'
+
 
     // json 파싱
     implementation group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
-
     implementation group: 'org.hibernate', name: 'hibernate-spatial', version: '5.5.7.Final'
 
     // AWS S3 이미지 업로드를 위한 디펜던시
