--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,8 +31,6 @@ cloud.aws.region.static= ${S3_REGION}
 cloud.aws.credentials.access-key= ${S3_ACCESS_KEY}
 cloud.aws.credentials.secret-key= ${S3_SECRET_KEY}
 
-# HTTPS
-#server.ssl.key-store= classpath:keystore.p12
-#server.ssl.key-store-password= ${SSL_PW}
-#server.port= ${SSL_PORT}
-#server.ssl.key-store-type=PKCS12
+# IAMPORT
+iamport.key= ${IAMPORT_KEY}
+iamport.secret= ${IAMPORT_SECRET}
