채팅 갈아엎기

--- a/build.gradle
+++ b/build.gradle
@@ -55,11 +55,11 @@ dependencies {
 
     // redis
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
-    implementation 'org.springframework.boot:spring-boot-starter-data-redis-reactive'
-    implementation 'org.springframework.boot:spring-boot-starter-cache'
+//    implementation 'org.springframework.boot:spring-boot-starter-data-redis-reactive'
+//    implementation 'org.springframework.boot:spring-boot-starter-cache'
 
     //embedded-redis
-    implementation group: 'it.ozimov', name: 'embedded-redis', version: '0.7.2'
+//    implementation group: 'it.ozimov', name: 'embedded-redis', version: '0.7.2'
 
 
     // json 파싱
